Fixed div collapsing and preventing print on mobile

--- a/coupon/static/coupon/css/generate.css
+++ b/coupon/static/coupon/css/generate.css
@@ -15,6 +15,8 @@ body {
     height: 100%;
     padding: 0px !important;
     margin: 0px !important;
+    width: 100%;
+    overflow: auto;
 }
 
 .container-fluid {
